--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "debug": "~2.6.9",
     "express": "~4.18.2",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
     "morgan": "~1.9.1"
   },
-  "engines": { "node": "16.16.0" }
+  "engines": {
+    "node": "16.16.0"
+  }
 }
